k8s-easyeduzalo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easyeduzalo
  namespace: production
spec:
  selector:
    app: easyeduzalo
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
