k8s-easyeduzalo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyeduzalo-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sn-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
spec:
  ingressClassName: nginx
  rules:
    - host: easyeduzalo.easyedu.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easyeduzalo
                port:
                  name: http
  tls:
    - hosts:
        - easyeduzalo.easyedu.vn
      secretName: easyeduzalo-tls-secret
